Casi todo listo

--- a/prepros/pug/component/_footer.pug
+++ b/prepros/pug/component/_footer.pug
@@ -12,8 +12,8 @@
                     | #{n}
     .fondoParallax.infoPlannerApp__cajas--footer.position-relative
         .infoPlannerApp__cajas
-            +textFooter("../images/emailWhite.svg", "E-Mail", "a", "info@plannerapp.net")               
-            +textFooter("../images/answer.svg", "Telefono", "p","(506) 7041 2463")               
-            +textFooter("../images/faceboockCircle.svg", "Faceboock", "a", "PlannerApp 360")               
+            +textFooter("../images/emailWhite.svg", "E-Mail", "a", "info@plannerapp.net", "http://plannerapp.net/2019/08/03/administracion-de-proyectos-de-construccion-vs-proyectos-tecnologicos/#respond", "_blanck")               
+            +textFooter("../images/answer.svg", "Telefono", "a","(506) 7041 2463", "#modal", "")               
+            +textFooter("../images/faceboockCircle.svg", "Faceboock", "a", "PlannerApp 360", "", "_blanck")               
 
     
