--- a/prepros/pug/component/_mainBeneficios.pug
+++ b/prepros/pug/component/_mainBeneficios.pug
@@ -1,6 +1,6 @@
 .container
     .beneficios--Contenedor.position-relative
-        .beneficios--Contenedor--info
+        .beneficios--Contenedor--info.pt-3.pb-3
             h3 Modulos Disponible
             +BeneficiosTodos("", "noEsCarusel", "", "../images/Proyectos_PlannerApp.svg", "Planificación de proyectos", "Aprovecha la colaboración de tu equipo para planificar y dar seguimiento a todas las tareas del proyecto.", "También puedes tener a disposición toda la documentación necesaria para la fluidez del proyecto.")
             +lineaMedia
