--- a/css/index.css
+++ b/css/index.css
@@ -54,16 +54,12 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0px 0px 6px 0px #337ab7;
 }
 /*Aqui inicia el codigo de el carusel*/
-.carousel {
-  width: 100%;
-  height: 500px;
-}
-.carousel-item .beneficios {
+.carousel .beneficios {
   background-color: rgba(51,122,183,0.6);
   color: #fff;
   padding: 0.1px;
 }
-.carousel-item .beneficios__circle {
+.carousel .beneficios__circle {
   height: 100px;
   width: 100px;
   background-color: #222;
@@ -73,41 +69,34 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   margin: 20px auto;
 }
-.carousel-item .beneficios__circle img {
+.carousel .beneficios__circle img {
   width: 65px;
   height: 65px;
 }
-.carousel-item .beneficios__txt {
+.carousel .beneficios__txt {
   width: 85%;
   margin: 30px auto;
 }
-.carousel-item .beneficios__txt h3 {
+.carousel .beneficios__txt h3 {
   font-size: 19px;
   text-align: center;
 }
-.carousel-item .beneficios__txt p {
+.carousel .beneficios__txt p {
   line-height: 1.4;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 400;
   text-align: justify;
+  margin-top: 10px;
 }
-.carousel-item .beneficios__txt button {
+.carousel .beneficios__txt button {
   font-size: 15px;
   display: flex;
   margin: 50px auto;
   color: #fff !important;
   border-color: #fff;
 }
-.carousel-item .beneficios__txt button:hover {
+.carousel .beneficios__txt button:hover {
   border-color: #007bff;
-}
-#circleIndicador {
-  width: 10px;
-  height: 10px;
-  border-radius: 100%;
-  margin: 15px;
-  padding: 0;
-  border: 1px solid #fff;
 }
 /*Aqui inicia el codigo de los beneficios*/
 .beneficios--Contenedor {
@@ -287,40 +276,21 @@ body::-webkit-scrollbar-thumb {
   }
 }
 /*Aqui inicia el codigo de el el media de 992px*/
-.alto {
-  height: 550px !important;
-}
 @media screen and (max-width: 991px) {
-  .alto {
-    height: 450px !important;
-  }
   .lento {
-    position: relative !important;
-    width: 100% !important;
-    height: 170px !important;
-    background-color: #337ab7;
+    width: 200px !important;
   }
-  .carusel2 {
-    position: relative;
+  main {
+    height: auto !important;
   }
-  .carusel-item .beneficios {
-    display: flex;
+  .carousel .beneficios__txt p {
+    text-align: left;
+    font-size: 13px;
+    width: 83%;
+    margin: 13px auto;
   }
-  .carusel-item .beneficios__txt {
-    width: 70%;
-  }
-  .carusel-item .beneficios__txt h3 {
-    font-size: 17px;
-  }
-  .carusel-item .beneficios__txt p {
-    font-size: 14px;
-    width: 80%;
-    margin: auto;
-    text-align: center;
-  }
-  .carusel-item .beneficios__txt button {
-    font-size: 14px;
-    margin: 20px auto;
+  .carousel .beneficios__txt h3 {
+    font-size: 16px;
   }
   .beneficios--Contenedor--info h3 {
     font-size: 20px;
@@ -340,9 +310,6 @@ body::-webkit-scrollbar-thumb {
   }
   .beneficios--Contenedor--info .beneficios__txt button {
     font-size: 14px;
-  }
-  .beneficios--Contenedor--info .beneficios__txt .txtAdd {
-    display: none;
   }
   .infoPlannerApp__cajas--masDescripcion {
     background-size: 90% 100%;
@@ -387,24 +354,58 @@ body::-webkit-scrollbar-thumb {
   .alto {
     height: 410px !important;
   }
-  .carusel-item .beneficios__circle {
+  .lento {
+    width: 100% !important;
+    height: 180px;
+    position: relative !important;
+  }
+  .carousel .beneficios {
+    display: flex;
+    justify-content: space-evenly;
+    position: relative !important;
+    background: #337ab7;
+    align-items: center;
+    padding: 20px 0px;
+  }
+  .carousel .beneficios__circle {
+    margin: auto 10px;
     width: 85px;
     height: 85px;
-    margin: auto;
   }
-  .carusel-item .beneficios__circle img {
+  .carousel .beneficios__circle img {
     height: 55px;
     width: 55px;
   }
-  .carusel-item .beneficios__txt {
+  .carousel .beneficios__txt {
+    width: 60%;
+    margin: 0;
+  }
+  .carousel .beneficios__txt p {
+    width: 60%;
+  }
+  .carousel .beneficios__txt button {
+    display: block !important;
+    margin: 10px auto;
+  }
+  .beneficios__circle {
+    width: 85px;
+    height: 85px;
+    margin: auto 0;
+  }
+  .beneficios__circle img {
+    height: 55px;
+    width: 55px;
+  }
+  .beneficios__txt {
     height: 50%;
     width: 60%;
     margin-left: -50px;
   }
-  .carusel-item .beneficios__txt p {
-    transition: display 2s;
-    display: none;
-    will-change: display;
+  .beneficios__txt h3 {
+    margin-bottom: 5px;
+  }
+  .beneficios__txt button {
+    display: none !important;
   }
   .beneficios--Contenedor--info h3 {
     font-size: 17px;
@@ -486,9 +487,6 @@ body::-webkit-scrollbar-thumb {
 }
 /*Aqui inicia el codigo de el el media de 575px*/
 @media screen and (max-width: 575px) {
-  .alto {
-    height: 340px !important;
-  }
   header nav ol:nth-child(2) {
     display: none;
   }
@@ -499,6 +497,22 @@ body::-webkit-scrollbar-thumb {
     width: 30px;
     margin-right: 10px;
     cursor: pointer;
+  }
+  .carousel .beneficios__txt p {
+    width: 80%;
+  }
+  .carousel .beneficios__txt button {
+    font-size: 13px;
+  }
+  .txtAdd {
+    display: none !important;
+  }
+  .txtAdd + button {
+    display: block !important;
+    font-size: 13px;
+  }
+  .ultimo .beneficios__txt {
+    margin-left: 10px;
   }
   .infoPlannerApp__cajas--descripcion {
     background-size: 100%;
@@ -511,59 +525,50 @@ body::-webkit-scrollbar-thumb {
   }
 }
 /*Aqui inicia el codigo de el el media de 425px*/
-strong {
-  font-weight: 900;
-}
-.opacity {
-  display: inline-block !important;
-  transition: 0.8s;
-  background-color: rgba(0,0,0,0.3);
-}
-.cajas-opacity {
-  height: 100vh;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  width: 100%;
-  display: none;
-}
-.cajas {
-  z-index: 2;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  position: fixed;
+.modalin {
   top: 0;
   display: none;
 }
-.pregunta {
-  margin: auto;
-  width: 300px;
-  height: 175px;
-  align-items: center;
-  text-align: center;
-  padding: 1px;
-  border-radius: 10px;
+.modalin:before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  opacity: 0.6;
+  background-color: #222;
+  position: absolute;
+}
+.modalin .modalTxt {
   border: 1px solid #fff;
+  padding: 30px;
+  border-radius: 10px;
+  transform: translateX(-3000%);
+}
+.modalin .modalTxt a {
+  background: #25d366 !important;
   color: #fff;
 }
-.pregunta .text {
-  margin: 30px auto;
-  width: 129px;
+.modalin .modalTxt .btn {
+  border: none;
 }
-.pregunta .btn {
-  margin: 12px;
+.modalin .modalTxt .btn-primary:focus {
+  box-shadow: none !important;
 }
-.pregunta .btn:active {
-  transform: scale(0.5);
-  transition: 1s;
+.modalin .modalTxt .btn:focus {
+  box-shadow: none !important;
+}
+.modalin .modalTxt h3 {
+  text-align: center;
+  margin-bottom: 15px;
+  font-size: 13px;
+}
+.modalin .modalTxt a {
+  margin: 0 10px;
 }
 .modalIn {
-  animation: modalIn 0.8s forwards;
+  animation: modalIn 0.6s forwards;
 }
 .modalOut {
-  animation: modalOut 0.8s forwards;
+  animation: modalOut 0.6s forwards;
 }
 @-moz-keyframes modalOut {
   0% {
