--- a/prepros/pug/component/_caruselBeneficios.pug
+++ b/prepros/pug/component/_caruselBeneficios.pug
@@ -1,5 +1,5 @@
-.carusel( class="carousel position-absolute h-100 carusel2" style="top: 0; width: 20%" time="15000", cantidad="3")
-    .carusel-inner.h-100(time="15000" cantidadImg="3" onclick="init('carusel2')")
-        +BeneficiosTodos("vista item-1","esCarusel","", "../images/Proyectos_PlannerApp.svg", "Planificación de proyectos", "Aprovecha la colaboración de tu equipo para planificar y dar seguimiento a todas las tareas del proyecto.")
-        +BeneficiosTodos("item-2", "esCarusel", "", "../images/ControlAcceso_PlannerApp.svg", "Control de Acceso", "Realiza los registros de ingreso del personal en proyectos o en oficinas.", "si")
-        +BeneficiosTodos("item-3", "esCarusel", "", "../images/RRHH_PlannerApp.svg", "Recursos Humanos", "Administra el personal y asígnalo a las áreas de trabajo (Proyectos u oficina).", "si")
+.lento(class="slide carousel position-absolute h-100" style="top: 0; width: 20%" data-touch="false" data-pause="false" data-ride="carousel")
+    .carousel-inner.h-100
+        +BeneficiosTodos("active carousel-item","esCarusel","", "../images/Proyectos_PlannerApp.svg", "Planificación de proyectos", "Aprovecha la colaboración de tu equipo para planificar y dar seguimiento a todas las tareas del proyecto.")
+        +BeneficiosTodos("carousel-item", "esCarusel", "", "../images/ControlAcceso_PlannerApp.svg", "Control de Acceso", "Realiza los registros de ingreso del personal en proyectos o en oficinas.", "si")
+        +BeneficiosTodos("carousel-item", "esCarusel", "", "../images/RRHH_PlannerApp.svg", "Recursos Humanos", "Administra el personal y asígnalo a las áreas de trabajo (Proyectos u oficina).", "si")
