--- a/prepros/pug/component/_caruselGrande.pug
+++ b/prepros/pug/component/_caruselGrande.pug
@@ -1,11 +1,12 @@
-.container.position-relative.alto(style="height: 550px; margin-top: 50px;")
-    div(class="carousel h-100 carusel1")
-        .carousel-inner.h-100(time="5000", cantidadImg="9" onclick="init('carusel1')")
-            .carousel-item.vista.item-1
-                img(src="../images/img1.png", alt="alt" )
+main.container.carousel.position-relative(style="height: 550px; margin-top: 50px;")
+    .carousel.slide(data-ride="carousel" data-touch="false" data-pause="false")
+        .carousel-inner
+            each c in [1,2,3,4,5,6,7,8,9]
+                if c == 1
+                    +caruselItem("active", c) 
+                else
+                    +caruselItem("", c) 
 
-            each cn in [2, 3, 4, 5, 6, 7, 8, 9]
-                .carousel-item(class=`item-${cn}`)
-                    img(src=`../images/img${cn}.png`, alt="alt" )
+                   
     include _CaruselBeneficios.pug
     
