--- a/prepros/stylus/component/@media/_media768.styl
+++ b/prepros/stylus/component/@media/_media768.styl
@@ -2,27 +2,63 @@
     .alto 
         height 410px !important
     
-    
-    .carusel-item
+    .lento
+        width: 100% !important
+        height 180px
+        position relative !important
+
+    .carousel
         .beneficios
+            display flex
+            justify-content: space-evenly
+            position relative !important
+            background: colorPrimario 
+            align-items: center
+            padding: 20px 0px
+
             &__circle
+                margin: auto 10px
                 width 85px
                 height 85px
-                margin: auto
+                // margin: auto 0
 
+                    
                 img 
                     height 55px
                     width: 55px
 
             &__txt
-                height 50%
                 width: 60%
-                margin-left: -50px
+                margin: 0
 
-                p
-                    transition: display 2s
-                    display: none
-                    will-change: display 
+                p 
+                    width: 60%
+
+                button 
+                    display: block !important
+                    margin: 10px auto
+
+    .beneficios
+        &__circle
+            width 85px
+            height 85px
+            margin: auto 0
+
+            img 
+                height 55px
+                width: 55px
+
+        &__txt
+            height 50%
+            width: 60%
+            margin-left: -50px
+
+            h3
+                margin-bottom: 5px
+
+            button 
+                display: none !important
+
 
 
     .beneficios--Contenedor--info
