--- a/css/index.css
+++ b/css/index.css
@@ -54,16 +54,46 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0px 0px 6px 0px #337ab7;
 }
 /*Aqui inicia el codigo de el carusel*/
-.carousel {
+.carusel {
   width: 100%;
   height: 500px;
 }
-.carousel-item .beneficios {
+.carusel-inner {
+  width: 100%;
+  overflow: hidden;
+  flex-shrink: 0;
+  display: flex;
+  position: relative;
+  height: 100%;
+}
+.carusel-item {
+  width: 100%;
+  height: 100%;
+  transform: translateX(100%);
+  position: absolute;
+}
+.carusel-item img {
+  width: 100%;
+  height: 100%;
+}
+.vista {
+  transform: translateX(0);
+}
+.go-out {
+  animation: go-out 3s forwards;
+}
+.get-in {
+  animation: get-in 3s forwards;
+}
+.transparent {
+  opacity: 0;
+}
+.carusel-item .beneficios {
   background-color: rgba(51,122,183,0.6);
   color: #fff;
   padding: 0.1px;
 }
-.carousel-item .beneficios__circle {
+.carusel-item .beneficios__circle {
   height: 100px;
   width: 100px;
   background-color: #222;
@@ -73,32 +103,32 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   margin: 20px auto;
 }
-.carousel-item .beneficios__circle img {
+.carusel-item .beneficios__circle img {
   width: 65px;
   height: 65px;
 }
-.carousel-item .beneficios__txt {
+.carusel-item .beneficios__txt {
   width: 85%;
   margin: 30px auto;
 }
-.carousel-item .beneficios__txt h3 {
+.carusel-item .beneficios__txt h3 {
   font-size: 19px;
   text-align: center;
 }
-.carousel-item .beneficios__txt p {
+.carusel-item .beneficios__txt p {
   line-height: 1.4;
   font-size: 15px;
   font-weight: 400;
   text-align: justify;
 }
-.carousel-item .beneficios__txt button {
+.carusel-item .beneficios__txt button {
   font-size: 15px;
   display: flex;
   margin: 50px auto;
   color: #fff !important;
   border-color: #fff;
 }
-.carousel-item .beneficios__txt button:hover {
+.carusel-item .beneficios__txt button:hover {
   border-color: #007bff;
 }
 #circleIndicador {
@@ -108,6 +138,70 @@ body::-webkit-scrollbar-thumb {
   margin: 15px;
   padding: 0;
   border: 1px solid #fff;
+}
+@-moz-keyframes get-in {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@-webkit-keyframes get-in {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@-o-keyframes get-in {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes get-in {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@-moz-keyframes go-out {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+@-webkit-keyframes go-out {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+@-o-keyframes go-out {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+@keyframes go-out {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 /*Aqui inicia el codigo de los beneficios*/
 .beneficios--Contenedor {
