Media hasta 500px listo

--- a/prepros/pug/component/_caruselBeneficios.pug
+++ b/prepros/pug/component/_caruselBeneficios.pug
@@ -1,5 +1,5 @@
 .lento(class="slide carousel position-absolute h-100" style="top: 0; width: 20%" data-touch="false" data-pause="false" data-ride="carousel")
     .carousel-inner.h-100
-        +BeneficiosTodos("active carousel-item","esCarusel","", "../images/Proyectos_PlannerApp.svg", "Planificación de proyectos", "Aprovecha la colaboración de tu equipo para planificar y dar seguimiento a todas las tareas del proyecto.")
-        +BeneficiosTodos("carousel-item", "esCarusel", "", "../images/ControlAcceso_PlannerApp.svg", "Control de Acceso", "Realiza los registros de ingreso del personal en proyectos o en oficinas.", "si")
-        +BeneficiosTodos("carousel-item", "esCarusel", "", "../images/RRHH_PlannerApp.svg", "Recursos Humanos", "Administra el personal y asígnalo a las áreas de trabajo (Proyectos u oficina).", "si")
+        +BeneficiosTodos("active carousel-item","esCarusel","", "../images/Proyectos_PlannerApp.svg", "Planificación de proyectos", "Aprovecha la colaboración de tu equipo para planificar y dar seguimiento a todas las tareas del proyecto.", "También puedes tener a disposición toda la documentación necesaria para la fluidez del proyecto.")
+        +BeneficiosTodos("carousel-item", "esCarusel", "", "../images/ControlAcceso_PlannerApp.svg", "Control de Acceso", "Realiza los registros de ingreso del personal en proyectos o en oficinas.", "Los registros pueden ser usados para calculo de nomina y para llevar el control de consumo de tiempo del proyecto")
+        +BeneficiosTodos("carousel-item", "esCarusel", "", "../images/RRHH_PlannerApp.svg", "Recursos Humanos", "Administra el personal y asígnalo a las áreas de trabajo (Proyectos u oficina).",  "Crea una bitácora con sus acciones de personal para historial de la carrera desarrollada en la compañía.")
