--- a/prepros/stylus/component/@media/_media575.styl
+++ b/prepros/stylus/component/@media/_media575.styl
@@ -15,15 +15,15 @@
         .beneficios
             &__txt
                 p
-                    width: 80%
+                    width: 100%
                     
-                button
+                a
                     font-size: 13px
 
     .txtAdd
         display none !important
 
-        & + button
+        & + a
             display: block !important
             font-size: 13px
 
