--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,35 @@
-@media (prefers-reduced-motion: reduce) {
-  .carousel-item {
-    transition: 0.8s;
-  }
-}
-/*Aqui inicia el codigo de modificacion de container*/
 .container {
   max-width: 1080px;
+}
+html {
+  scroll-behavior: smooth;
+}
+/*Codigo de modal q sale arriba del carrusel*/
+.vistaTxt {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(51,122,183,0.6);
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+  color: #fff;
+  text-align: center;
+}
+.vistaTxt h3 {
+  margin: 23px auto;
+}
+.vistaTxt p {
+  width: 60%;
+  margin: 10px auto;
+}
+.vistaTxt img {
+  width: 21px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
 }
 /*Aqui inicia el codigo de el header*/
 header {
@@ -78,24 +102,24 @@ body::-webkit-scrollbar-thumb {
   margin: 30px auto;
 }
 .carousel .beneficios__txt h3 {
-  font-size: 19px;
+  font-size: 17px;
   text-align: center;
+  margin-bottom: 17px;
 }
 .carousel .beneficios__txt p {
   line-height: 1.4;
-  font-size: 14px;
-  font-weight: 400;
-  text-align: justify;
+  font-size: 13px;
+  font-weight: 500;
   margin-top: 10px;
 }
-.carousel .beneficios__txt button {
+.carousel .beneficios__txt a {
   font-size: 15px;
   display: flex;
   margin: 50px auto;
   color: #fff !important;
   border-color: #fff;
 }
-.carousel .beneficios__txt button:hover {
+.carousel .beneficios__txt a:hover {
   border-color: #007bff;
 }
 /*Aqui inicia el codigo de los beneficios*/
@@ -128,43 +152,43 @@ body::-webkit-scrollbar-thumb {
   margin-bottom: 30px;
 }
 .beneficios--Contenedor .beneficios__circle {
-  width: 130px;
-  height: 130px;
+  width: 100px;
+  height: 100px;
   background: #222;
   border-radius: 100%;
   display: flex;
   justify-content: center;
 }
 .beneficios--Contenedor .beneficios__circle img {
-  width: 65%;
+  width: 60%;
 }
 .beneficios--Contenedor .beneficios__txt {
   width: 40%;
 }
 .beneficios--Contenedor .beneficios__txt h3 {
-  font-size: 19px;
+  font-size: 16px;
+  margin-bottom: 10px;
 }
 .beneficios--Contenedor .beneficios__txt p {
   line-height: 1.4;
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 13px;
 }
-.beneficios--Contenedor .beneficios__txt button {
+.beneficios--Contenedor .beneficios__txt a {
   border-color: #fff;
   color: #fff;
   margin: 20px auto;
   display: flex;
 }
-.beneficios--Contenedor .beneficios__txt button:hover {
+.beneficios--Contenedor .beneficios__txt a:hover {
   border-color: #007bff;
   background: linear-gradient(89deg, #337ab7, #222);
 }
-.beneficios--Contenedor .beneficios__txt button:focus {
+.beneficios--Contenedor .beneficios__txt a:focus {
   box-shadow: none;
   border-color: transparent;
   background: linear-gradient(89deg, #337ab7, #222);
 }
-.beneficios--Contenedor .beneficios__txt button:active {
+.beneficios--Contenedor .beneficios__txt a:active {
   border-color: transparent;
   background: linear-gradient(89deg, #337ab7, #222);
 }
@@ -363,9 +387,16 @@ body::-webkit-scrollbar-thumb {
     display: flex;
     justify-content: space-evenly;
     position: relative !important;
-    background: #337ab7;
     align-items: center;
     padding: 20px 0px;
+  }
+  .carousel .beneficios:before {
+    content: "";
+    background-color: #222;
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
   }
   .carousel .beneficios__circle {
     margin: auto 10px;
@@ -383,7 +414,7 @@ body::-webkit-scrollbar-thumb {
   .carousel .beneficios__txt p {
     width: 60%;
   }
-  .carousel .beneficios__txt button {
+  .carousel .beneficios__txt a {
     display: block !important;
     margin: 10px auto;
   }
@@ -403,9 +434,6 @@ body::-webkit-scrollbar-thumb {
   }
   .beneficios__txt h3 {
     margin-bottom: 5px;
-  }
-  .beneficios__txt button {
-    display: none !important;
   }
   .beneficios--Contenedor--info h3 {
     font-size: 17px;
@@ -484,6 +512,119 @@ body::-webkit-scrollbar-thumb {
   div .lento {
     height: 130px !important;
   }
+  .animacion_0 {
+    background-image: url("../images/planificacionProyecto.png");
+    background-position: center;
+    background-size: 100%;
+    position: relative;
+    animation: fondoMenu 15s linear infinite alternate;
+  }
+  .animacion_1 {
+    background-image: url("../images/controlDeAcceso.png");
+    background-position: center;
+    background-size: 100%;
+    position: relative;
+    animation: fondoMenu 15s linear infinite alternate;
+  }
+  .animacion_2 {
+    background-image: url("../images/RRHH.png");
+    background-position: center;
+    background-size: 100%;
+    position: relative;
+    animation: fondoMenu 15s linear infinite alternate;
+  }
+@-moz-keyframes fondoMenu {
+    0% {
+      background-size: 200%;
+      background-position: center;
+    }
+    20% {
+      background-position: right top;
+    }
+    40% {
+      background-position: center;
+      background-size: 100%;
+    }
+    60% {
+      background-position: left top;
+    }
+    80% {
+      background-position: left -100px;
+    }
+    100% {
+      background-position: right -100px;
+      background-size: 200%;
+    }
+}
+@-webkit-keyframes fondoMenu {
+    0% {
+      background-size: 200%;
+      background-position: center;
+    }
+    20% {
+      background-position: right top;
+    }
+    40% {
+      background-position: center;
+      background-size: 100%;
+    }
+    60% {
+      background-position: left top;
+    }
+    80% {
+      background-position: left -100px;
+    }
+    100% {
+      background-position: right -100px;
+      background-size: 200%;
+    }
+}
+@-o-keyframes fondoMenu {
+    0% {
+      background-size: 200%;
+      background-position: center;
+    }
+    20% {
+      background-position: right top;
+    }
+    40% {
+      background-position: center;
+      background-size: 100%;
+    }
+    60% {
+      background-position: left top;
+    }
+    80% {
+      background-position: left -100px;
+    }
+    100% {
+      background-position: right -100px;
+      background-size: 200%;
+    }
+}
+@keyframes fondoMenu {
+    0% {
+      background-size: 200%;
+      background-position: center;
+    }
+    20% {
+      background-position: right top;
+    }
+    40% {
+      background-position: center;
+      background-size: 100%;
+    }
+    60% {
+      background-position: left top;
+    }
+    80% {
+      background-position: left -100px;
+    }
+    100% {
+      background-position: right -100px;
+      background-size: 200%;
+    }
+}
 }
 /*Aqui inicia el codigo de el el media de 575px*/
 @media screen and (max-width: 575px) {
@@ -499,15 +640,15 @@ body::-webkit-scrollbar-thumb {
     cursor: pointer;
   }
   .carousel .beneficios__txt p {
-    width: 80%;
+    width: 100%;
   }
-  .carousel .beneficios__txt button {
+  .carousel .beneficios__txt a {
     font-size: 13px;
   }
   .txtAdd {
     display: none !important;
   }
-  .txtAdd + button {
+  .txtAdd + a {
     display: block !important;
     font-size: 13px;
   }
@@ -692,5 +833,42 @@ body::-webkit-scrollbar-thumb {
   }
   100% {
     transform: translateY(0);
+  }
+}
+@media screen and (min-width: 575px) {
+  .beneficios--Contenedor a {
+    display: none !important;
+  }
+}
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
   }
 }
