--- a/prepros/stylus/component/_beneficios.styl
+++ b/prepros/stylus/component/_beneficios.styl
@@ -29,28 +29,29 @@
             
 
         &__circle
-            width: 130px;
-            height: 130px;
+            width: 100px;
+            height: 100px;
             background: colorOscuro;
             border-radius: 100%;
             display: flex;
             justify-content: center;
 
             img
-                width: 65% 
+                width: 60% 
 
         &__txt
             width: 40%
 
             h3
-                font-size: 19px
+                font-size: 16px
+                margin-bottom: 10px
 
             p
                 line-height: 1.4
-                font-size: 15px
-                font-weight: 400
+                font-size: 13px
+                // font-weight: 500
 
-            button  
+            a  
                 border-color: colorClaro
                 color: white
                 margin: 20px auto
