--- a/prepros/stylus/component/_carusel.styl
+++ b/prepros/stylus/component/_carusel.styl
@@ -22,17 +22,18 @@
             margin 30px auto
 
             h3
-                font-size: 19px
+                font-size: 17px
                 text-align: center
-            
+                margin-bottom: 17px
+
             p
                 line-height: 1.4
-                font-size: 14px
-                font-weight: 400
-                text-align: justify
+                font-size: 13px
+                font-weight: 500
+                // text-align: justify
                 margin-top: 10px
 
-            button 
+            a 
                 font-size: 15px
                 display: flex
                 margin: 50px auto
