--- a/prepros/stylus/index.styl
+++ b/prepros/stylus/index.styl
@@ -36,6 +36,8 @@ html
 
 /*Aqui inicia el codigo de el header*/    
 @import "component/_header.styl"
+/*Aqui inicia el codigo de el logo*/    
+@import "component/_logo.styl"
 /*Aqui inicia el codigo de la barra*/    
 @import "component/_barra.styl"
 /*Aqui inicia el codigo de el carusel*/    
